src/tests/ValidTests/TestRepeat.agl
# Deve funcionar

repeat {
    a: String = "joao";
} until a == "boi";
